--- a/gb/14/8/12/n4222963.md
+++ b/gb/14/8/12/n4222963.md
@@ -1,64 +1,55 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/yfnpkc3012/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/yfnpkc3012/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/yfnpkc3012/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/yfnpkc3012/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/yfnpkc3012/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/yfnpkc3012/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/yfnpkc3012/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/yfnpkc3012/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/yfnpkc3012/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/yfnpkc3012/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/yfnpkc3012/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/yfnpkc3012/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/yfnpkc3012/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/yfnpkc3012/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/yfnpkc3012/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/yfnpkc3012/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/yfnpkc3012/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/yfnpkc3012/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/yfnpkc3012/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/yfnpkc3012/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/yfnpkc3012/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/yfnpkc3012/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/yfnpkc3012/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/yfnpkc3012/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/yfnpkc3012/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/yfnpkc3012/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/yfnpkc3012/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/yfnpkc3012/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/yfnpkc3012/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/yfnpkc3012/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/yfnpkc3012/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/yfnpkc3012/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/yfnpkc3012/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/yfnpkc3012/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/yfnpkc3012/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/yfnpkc3012/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/yfnpkc3012/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/yfnpkc3012/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/yfnpkc3012/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/yfnpkc3012/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/yfnpkc3012/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/yfnpkc3012/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/yfnpkc3012/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/yfnpkc3012/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/yfnpkc3012/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/yfnpkc3012/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/yfnpkc3012/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hoxgwd311/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hoxgwd311/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hoxgwd311/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>同庆文化艺术中心30周年庆</h2>
-<img width="600" src="https://i.epochtimes.com/assets/uploads/2014/08/140812002012836-600x400.jpg" />
-<h6>同庆文化艺术中心于8月10日下午，在法拉盛图书馆剧场举办庆祝成立30周年演出。（卫真/大纪元）
-</h6>
+
+<h6></h6>
 <hr>
 <p>【大纪元2014年08月12日讯】(大纪元记者卫真纽约报导)同庆文化艺术中心近日在法拉盛图书馆剧场举办庆祝成立30周年演出，吸引2百多位喜爱中国传统戏剧艺术的人士到场观赏，整个剧场座无虚席，演员精彩专业的表演赢得观众阵阵喝彩。</p>
 <p>这场演出的节目包括越剧、昆曲、京剧、舞蹈等，剧目包括越剧的《三盖衣》、《唐伯虎点秋香》和《二堂放子》、昆剧的《挡马》以及京剧的《挑滑车》，舞蹈是 《孔雀舞》。整场节目由同庆文化艺术中心董事长何潘树华女士、副总裁韦毅、团长张苗珍女士统筹，张苗珍任导演及艺术总监。</p>
 <p>同庆文化艺术中心成立于1984年，30年来一直在美国弘扬中国的京剧、昆曲及越剧等传统文化剧种，本场演出得到董事长何潘树华的资助。<br />
-	<figure id="attachment_5764861" style="width: 600px" class="wp-caption aligncenter"><img src="https://i.epochtimes.com/assets/uploads/2014/08/140812002039836-600x400.jpg" alt="同庆文化艺术中心于8月10日下午，在法拉盛图书馆剧场举办庆祝成立30周年演出，国会众议员孟昭文办公室代表为艺术中心颁发奖状表示鼓励。（卫真/大纪元）" title="同庆文化艺术中心于8月10日下午，在法拉盛图书馆剧场举办庆祝成立30周年演出，国会众议员孟昭文办公室代表为艺术中心颁发奖状表示鼓励。（卫真/大纪元）" width="600" b="400"
-	class="size-large wp-image-5764861" /></a><figcaption class="wp-caption-text">同庆文化艺术中心于8月10日下午，在法拉盛图书馆剧场举办庆祝成立30周年演出，国会众议员孟昭文办公室代表为艺术中心颁发奖状表示鼓励。（卫真/大纪元）</figcaption></figure><br />在演出正式开始前，已经84岁高龄的何潘树华演唱《梁山伯与祝英台之楼台会》片段，以此祝贺艺术中心成立30周年，国会众议员孟昭文办公室代表也为艺术中心颁发奖状表示鼓励。</p>
+	<figure id="attachment_5764861" aria-describedby="caption-attachment-5764861" style="width: 600px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2014/08/140812002039836-600x400.jpg" target="_blank" rel="noreferrer noopener"></a><figcaption id="caption-attachment-5764861" class="wp-caption-text">同庆文化艺术中心于8月10日下午，在法拉盛图书馆剧场举办庆祝成立30周年演出，国会众议员孟昭文办公室代表为艺术中心颁发奖状表示鼓励。（卫真/大纪元）</figcaption></figure><br />在演出正式开始前，已经84岁高龄的何潘树华演唱《梁山伯与祝英台之楼台会》片段，以此祝贺艺术中心成立30周年，国会众议员孟昭文办公室代表也为艺术中心颁发奖状表示鼓励。</p>
 <p>(责任编辑：Aric chen）</p>
 
 <hr>
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/yfnpkc3012/djy/blob/master/gb/5/9/22/n1061565.md#1">第14届中国传统戏剧节10月2日登场</a></li>
-<li><a href="https://github.com/yfnpkc3012/djy/blob/master/gb/7/4/25/n1689621.md#1">昆曲艺术研习社推出传统名剧：《玉簪记》</a></li>
-<li><a href="https://github.com/yfnpkc3012/djy/blob/master/gb/11/1/5/n3133504.md#1">华人移民：神韵演出一生难得一见</a></li>
-<li><a href="https://github.com/yfnpkc3012/djy/blob/master/gb/12/4/2/n3556021.md#1">守住传统文化的清纯</a></li>
-<li><a href="https://github.com/yfnpkc3012/djy/blob/master/gb/12/5/11/n3586496.md#1">美国长江剧团大戏 赵震宇将精彩演出</a></li>
-<li><a href="https://github.com/yfnpkc3012/djy/blob/master/gb/20/11/17/n12554108.md#1">计算“邮寄选票”后反超   纽约众议员布朗斯汀宣布胜选</a></li>
-<li><a href="https://github.com/yfnpkc3012/djy/blob/master/gb/20/11/17/n12554247.md#1">纽约市感染率接近3% 学校周二继续开放</a></li>
-<li><a href="https://github.com/yfnpkc3012/djy/blob/master/gb/20/11/17/n12554408.md#1">台侨华府挺川：唯一可对抗中共的人</a></li>
-<li><a href="https://github.com/yfnpkc3012/djy/blob/master/gb/20/11/16/n12552412.md#1">邮政数据显示 逾30万人搬出纽约市</a></li>
-<li><a href="https://github.com/yfnpkc3012/djy/blob/master/gb/20/11/16/n12552468.md#1">白思豪称周一不关校 纽约州长口径反复</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/5/9/22/n1061565.md#1">第14届中国传统戏剧节10月2日登场</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/7/4/25/n1689621.md#1">昆曲艺术研习社推出传统名剧：《玉簪记》</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/11/1/5/n3133504.md#1">华人移民：神韵演出一生难得一见</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/12/4/2/n3556021.md#1">守住传统文化的清纯</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/12/5/11/n3586496.md#1">美国长江剧团大戏 赵震宇将精彩演出</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/20/n13741331.md#1">纽约市出现疑似猴痘病例</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/20/n13741332.md#1">水牛城枪手遭大陪审团起诉</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/20/n13741334.md#1">纽约上诉法庭恢复“隔膜法” 警察工会不服</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/20/n13741336.md#1">纽约市议会新法：大楼房东必须安装自动关闭门</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/20/n13741338.md#1">美人口普查局：纽约州人数不满两千万</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/11/6/n9810260.md#1" target="_blank">林辉：诸葛亮遗迹被毁 责任者江青秘书遭劫</a></li><li><a href="https://github.com/yfnpkc3012/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank">不一样的海外校园</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/20/1/5/n11769925.md#1" target="_blank">见证大法超常 屏东法轮功学员在法中熔炼</a></li>
+<li><a href="https://github.com/ychojm359/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank">解体中共复兴中华</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/5/23/n10420942.md#1" target="_blank">本真：《推背图》预言中美朝日大战及结局（一）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/16/n11262924.md#1" target="_blank">参加纽约大集会 意大利小伙子找到人生意义</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/ddcabe320/djy/blob/master/gb/20/11/15/n12550540.md#1">因预言中共病毒爆红 印度男孩预示来年天象</a></li>
-<li><a href="https://github.com/ddcabe320/djy/blob/master/gb/20/11/11/n12540543.md#1">拜登宣布当选总统 圣经专家：川普仍会胜出</a></li>
-<li><a href="https://github.com/ddcabe320/djy/blob/master/gb/20/11/10/n12537654.md#1">张爱玲和弟弟 一个最悲凉的手足亲情的故事</a></li>
-<li><a href="https://github.com/ddcabe320/djy/blob/master/gb/20/11/9/n12535003.md#1">【命理】八字解盘 拜登能入主白宫吗？</a></li>
-<li><a href="https://github.com/ddcabe320/djy/blob/master/gb/20/11/6/n12529751.md#1">中枪转生协警缉凶  双胎记男孩会前世妻儿</a></li>
-<li><a href="https://github.com/ddcabe320/djy/blob/master/gb/20/11/15/n12551030.md#1">【大陆新闻解毒 】时事小品：造假的败登</a></li>
-<li><a href="https://github.com/ddcabe320/djy/blob/master/gb/20/11/15/n12551389.md#1">【薇羽看世间】川普政府一石二鸟  ?</a></li>
-<li><a href="https://github.com/ddcabe320/djy/blob/master/gb/20/11/15/n12551495.md#1">【薇羽看世间】美大选舞弊 惊人“多猫腻”</a></li>
-<li><a href="https://github.com/ddcabe320/djy/blob/master/gb/20/11/14/n12549021.md#1">【大选更新11·14】川普支持者遭袭受伤</a></li>
-<li><a href="https://github.com/ddcabe320/djy/blob/master/gb/20/11/13/n12548081.md#1">川普宣布国家进入紧急状态 应对中共威胁</a></li>
-<li><a href="https://github.com/ddcabe320/djy/blob/master/gb/20/11/14/n12548711.md#1">美议员爆料 外企Scytl有偷换选票全部证据</a></li>
-<li><a href="https://github.com/ddcabe320/djy/blob/master/gb/20/11/13/n12548015.md#1">刘德华新片励志感人 亲笔信秀一手好字</a></li>
-<li><a href="https://github.com/ddcabe320/djy/blob/master/gb/20/11/13/n12548178.md#1">自曝坐网约车喝到剩水 张馨予直呼难受又后怕</a></li>
-<li><a href="https://github.com/ddcabe320/djy/blob/master/gb/20/11/15/n12551581.md#1">迪士尼CEO承认 《花木兰》因争议影响票房</a></li>
-<li><a href="https://github.com/ddcabe320/djy/blob/master/gb/20/11/13/n12547700.md#1">黄耀明演唱会忆中环感慨落泪 吁港人勿收声</a></li>
-<li><a href="https://github.com/ddcabe320/djy/blob/master/gb/20/11/15/n12551768.md#1">赵树海70岁生日出专辑 不禁直呼想念小孙女</a></li>
-<li><a href="https://github.com/ddcabe320/djy/blob/master/gb/20/11/15/n12550540.md#1">因预言中共病毒爆红 印度男孩预示来年天象</a></li>
-<li><a href="https://github.com/ddcabe320/djy/blob/master/gb/20/11/15/n12550309.md#1">日本警犬找人却半路开溜 警方还得派人找它</a></li>
-<li><a href="https://github.com/ddcabe320/djy/blob/master/gb/20/11/13/n12547495.md#1">吃对健脑防失智！7种食物让大脑变年轻</a></li>
-<li><a href="https://github.com/ddcabe320/djy/blob/master/gb/20/11/16/n12552492.md#1">在教堂住12年 英国流浪猫过世获纪念仪式</a></li>
-<li><a href="https://github.com/ddcabe320/djy/blob/master/gb/20/11/13/n12548179.md#1">说谎原来这么可怕！给身体带来6个变化</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/20/n11956529.md#1">台男拒缴违反居家检疫罚锾 于8日已出境 存款遭扣押</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/18/n11950904.md#1">【独家】武汉新增确诊是中共公布的22倍</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/19/n11953667.md#1">大陆网络流传的一份死亡名单 引关注</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/19/n11953195.md#1">16岁学生致信武汉作家方方 引起轩然大波</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/19/n11955384.md#1">北京昆明湖罕见涨潮 传上次涨潮后毛泽东去世</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/19/n11954954.md#1">王力宏武汉演出后发烧 忧染疫返台隔离2个月</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/19/n11955678.md#1">钟南山再甩锅 黄秋生怒呛中共专家玩弄言词</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/18/n11949282.md#1">《恋爱可以持续到天长地久》完结 收视破15%</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/18/n11950901.md#1">杜汶泽用口罩换米 与何韵诗幽默互动笑翻网友</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/18/n11950740.md#1">周杰伦全家澳洲度假 返台须居家隔离14天</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/12/n11936269.md#1">缘自天上来 这对夫妻是星官下凡</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/2/11/n11861945.md#1">病是前世业报？民国人做奇梦 疗恶疾</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/10/11/25/n3095498.md#1">姻缘天注定 丑女有丑福</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/10/n11929738.md#1">“福无双至祸不单行”史上有名的明鉴</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/17/n11947360.md#1">一舞（武）两用的智慧</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/yfnpkc3012/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/yfnpkc3012/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/14/8/12/n4222963.htm">同庆文化艺术中心30周年庆</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hoxgwd311/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hoxgwd311/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/14/8/12/n4222963.htm">同庆文化艺术中心30周年庆</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/yfnpkc3012/djy/blob/master/gb/14/8/12/n4222963.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/yfnpkc3012/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yfnpkc3012/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/yfnpkc3012/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/yfnpkc3012/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/yfnpkc3012/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yfnpkc3012/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/yfnpkc3012/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yfnpkc3012/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/yfnpkc3012/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yfnpkc3012/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/yfnpkc3012/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yfnpkc3012/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/yfnpkc3012/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yfnpkc3012/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/yfnpkc3012/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yfnpkc3012/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/yfnpkc3012/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yfnpkc3012/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/yfnpkc3012/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yfnpkc3012/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/yfnpkc3012/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yfnpkc3012/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/yfnpkc3012/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yfnpkc3012/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/yfnpkc3012/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yfnpkc3012/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/yfnpkc3012/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yfnpkc3012/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/yfnpkc3012/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yfnpkc3012/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/yfnpkc3012/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yfnpkc3012/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/yfnpkc3012/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yfnpkc3012/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/yfnpkc3012/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yfnpkc3012/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/yfnpkc3012/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yfnpkc3012/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/yfnpkc3012/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yfnpkc3012/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/yfnpkc3012/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yfnpkc3012/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/yfnpkc3012/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yfnpkc3012/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/yfnpkc3012/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yfnpkc3012/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/yfnpkc3012/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yfnpkc3012/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hoxgwd311/djy/blob/master/gb/14/8/12/n4222963.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hoxgwd311/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hoxgwd311/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hoxgwd311/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
